# fstree

./: .clang-format  .fstreeignore  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.rst  build.jolt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
python/: fstree.cpp  fstree_python.cpp  simple.cpp  simple.hpp
scripts/: build_deps.sh  version.py
src/: argparser.cpp  argparser.hpp  cache.cpp  cache.hpp  commit_ostream.cpp  commit_ostream.hpp  digest.cpp  digest.hpp  directory_iterator.cpp  directory_iterator.hpp  directory_iterator_posix.cpp  directory_iterator_std.cpp  directory_iterator_win32.cpp  event.cpp  event.hpp  exception.hpp  filesystem.hpp  filesystem_posix.cpp  filesystem_win32.cpp  glob_list.cpp  glob_list.hpp  hash.hpp  hash_blake3.cpp  hash_sha1.cpp  ignore.cpp  ignore.hpp  index.cpp  index.hpp  inode.cpp  inode.hpp  inode_posix.cpp  intrusive_ptr.cpp  intrusive_ptr.hpp  jolt.proto  lock_file.hpp  lock_file_posix.cpp  lock_file_win32.cpp  log.cpp  log.hpp  main.cpp  (+22 more)
test/: test_config.cpp  test_glob.cpp  test_glob.txt  test_ignore.cpp  test_ignore.txt  test_index_glob.cpp  test_iterator.cpp  test_status.cpp  test_url.cpp
