[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfstree"
version = "0.1.0"
description = "Python bindings for fstree - filesystem tree sharing and sync"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Robert Andersson", email = "rbrtandersson@gmail.com"}
]
keywords = ["filesystem", "sync", "tree", "fstree", "merkle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Networking",
]
dependencies = [
    "pybind11",
]

[project.urls]
Homepage = "https://github.com/srand/fstree"
Repository = "https://github.com/srand/fstree.git"
Issues = "https://github.com/srand/fstree/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfstree*"]

[tool.cibuildwheel.linux]
before-build = "bash scripts/build_deps.sh"
build = [
    "cp310-manylinux_*",
    "cp311-manylinux_*",
    "cp312-manylinux_*",
    "cp313-manylinux_*",
    "cp314-manylinux_*",
    "cp310-musllinux_*",
    "cp311-musllinux_*",
    "cp312-musllinux_*",
    "cp313-musllinux_*",
    "cp314-musllinux_*",
]

[tool.cibuildwheel.macos]
build = [
    "cp310-macosx_*",
    "cp311-macosx_*",
    "cp312-macosx_*",
    "cp313-macosx_*",
    "cp314-macosx_*",
]

[tool.cibuildwheel.windows]
build = [
    "cp310-win_*",
    "cp311-win_*",
    "cp312-win_*",
    "cp313-win_*",
    "cp314-win_*",
]
